modify routes and views to actually work

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,1 +1,10 @@
-<h1>Ada Channels</h1>
+<section class="channels-list">
+  <h1>Ada Channels</h1>
+  <ul>
+    <% @channels.each do |channel| %>
+      <li>
+        <%= channel.name %>
+      </li>
+    <% end %>
+  </ul>
+</section>
