fix view for new channel class

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -3,7 +3,7 @@
   <ul>
     <% @channels.each do |channel| %>
       <li>
-        <%= channel["name"] %>
+        <%= channel.name %>
       </li>
     <% end %>
   </ul>
