Upgraded Rails version, change to spec-style-tests and wrote starter controller tests

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,10 +1,12 @@
 <section class="channels-list">
   <h1>Ada Channels</h1>
-  <ul>
-    <% @channels.each do |channel| %>
-      <li>
-        <%= channel["name"] %>
-      </li>
-    <% end %>
-  </ul>
+  <% if @channels %>
+    <ul>
+      <% @channels.each do |channel| %>
+        <li>
+          <%= channel["name"] %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
 </section>
